more work on modifiers. added reach lib

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ systemProp.kotlinVersion = 1.6.0
 fabricKotlinVersion = 1.7.0+kotlin.1.6.0
 # Dependencies
 acVersion = 0.5.0+1.19
-trinketsVersion = 3.4.0
+reachVersion = 2.3.1
