--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,7 @@ archivesBaseName = gearifiers
 systemProp.kotlinVersion = 1.6.0
 fabricKotlinVersion = 1.7.0+kotlin.1.6.0
 # Dependencies
-acVersion = 0.5.0+1.19
+fcVersion = 0.1.0+1.19
+gcVersion = 0.1.0+1.19
 reachVersion = 2.3.1
+meVersion = 0.1.1
