--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loaderVersion = 0.14.11
 fabricVersion=0.58.0+1.19
 loomVersion = 1.0-SNAPSHOT
 # Mod Properties
-modVersion = 0.1.0
+modVersion = 0.1.0+1.19
 mavenGroup = fzzyhmstrs
 archivesBaseName = gearifiers
 # Kotlin
@@ -18,5 +18,5 @@ fabricKotlinVersion = 1.7.0+kotlin.1.6.0
 # Dependencies
 fcVersion = 0.1.0+1.19
 gcVersion = 0.1.0+1.19
-reachVersion = 2.3.1
+reachVersion = 2.3.0
 meVersion = 0.1.1
