--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loaderVersion = 0.14.11
 fabricVersion=0.58.0+1.19
 loomVersion = 1.0-SNAPSHOT
 # Mod Properties
-modVersion = 0.1.1+1.19
+modVersion = 0.1.2+1.19
 mavenGroup = fzzyhmstrs
 archivesBaseName = gearifiers
 # Kotlin
@@ -21,3 +21,4 @@ gcVersion = 0.1.1+1.19
 reachVersion = 2.3.0
 meVersion = 0.1.1
 emiVersion = 0.5.0+1.19.3
+reiVersion = 9.0.491
