--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,6 @@ fabricKotlinVersion = 1.7.0+kotlin.1.6.0
 fcVersion = 0.2.0+1.19
 gcVersion = 0.2.0+1.19
 reachVersion = 2.3.0
-meVersion = 0.1.1
+meVersion = 0.2.0-beta.6
 emiVersion = 0.5.0+1.19.3
 reiVersion = 9.0.491
