--- a/gradle.properties
+++ b/gradle.properties
@@ -7,17 +7,18 @@ yarnMappings=1.20.1+build.2
 loaderVersion = 0.14.21
 # Fabric API
 fabricVersion=0.83.1+1.20.1
-loomVersion = 1.2-SNAPSHOT
+loomVersion = 1.6-SNAPSHOT
 # Mod Properties
-modVersion = 0.6.1+1.20.1
+modVersion = 0.7.0+1.20.1
 mavenGroup = fzzyhmstrs
 archivesBaseName = gearifiers
 # Kotlin
-systemProp.kotlinVersion = 1.6.21
-fabricKotlinVersion = 1.7.4+kotlin.1.6.21
+systemProp.kotlinVersion = 1.9.22
+fabricKotlinVersion = 1.10.18+kotlin.1.9.22
 # Dependencies
 fcVersion = 0.4.1+1.20.1
 gcVersion = 0.3.6+1.20.1
+fzzyConfigVersion = 0.2.5+1.20.1
 reachVersion = 2.4.0
 meVersion = 0.2.0-beta.6
 emiVersion = 1.0.4+1.20.1
